# Sniffles

./: .gitignore  .project  CMakeLists.txt  Genotyper.cpp  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml  release.yaml
Debug/: Sniffles  makefile  objects.mk  sources.mk
Debug/src/: BamParser.d  Parser.d
Debug/src/plane-sweep/: subdir.mk
Debug/src/sub/: subdir.mk
Debug/src/tree/: IntervallTree.d  Scapegoat.d  subdir.mk
annotations/: source.txt
cmake/: Sniffles
cmake/src/: Sniffles.d
cmake/src/plane-sweep/: PlaneSweep.d
lib/bamtools-2.3.0/: CMakeLists.txt  README
lib/bamtools-2.3.0/docs/: Doxyfile
lib/bamtools-2.3.0/src/: CMakeLists.txt  ExportHeader.cmake
lib/bamtools-2.3.0/src/api/: BamAlignment.cpp  BamAlignment.h  BamMultiReader.cpp  BamMultiReader.h  BamReader.cpp  BamReader.h  CMakeLists.txt  SamConstants.h  SamHeader.cpp
lib/bamtools-2.3.0/src/api/algorithms/: Sort.h
lib/bamtools-2.3.0/src/api/internal/bam/: BamHeader_p.cpp  BamHeader_p.h  BamMultiReader_p.cpp  BamMultiReader_p.h  BamReader_p.cpp  BamReader_p.h  BamWriter_p.cpp
lib/bamtools-2.3.0/src/api/internal/index/: BamStandardIndex_p.cpp
lib/bamtools-2.3.0/src/api/internal/io/: BamHttp_p.cpp  BamHttp_p.h  BamPipe_p.cpp  BgzfStream_p.cpp  BgzfStream_p.h  CMakeLists.txt  HttpHeader_p.h  TcpSocketEngine_unix_p.cpp  TcpSocket_p.cpp  TcpSocket_p.h
lib/bamtools-2.3.0/src/toolkit/: CMakeLists.txt  bamtools.cpp  bamtools_convert.cpp  bamtools_convert.h  bamtools_count.cpp  bamtools_count.h  bamtools_coverage.cpp  bamtools_coverage.h  bamtools_filter.cpp  bamtools_filter.h  bamtools_header.cpp  bamtools_header.h  bamtools_index.cpp  bamtools_index.h  bamtools_merge.cpp  bamtools_merge.h  bamtools_random.cpp  bamtools_random.h  bamtools_resolve.cpp  bamtools_resolve.h  bamtools_revert.cpp  bamtools_revert.h  bamtools_sort.cpp  bamtools_sort.h  bamtools_split.cpp  bamtools_split.h  bamtools_stats.cpp  bamtools_stats.h  bamtools_tool.h  bamtools_version.h.in
lib/bamtools-2.3.0/src/utils/: CMakeLists.txt  bamtools_fasta.cpp  bamtools_fasta.h  bamtools_filter_engine.h  bamtools_filter_properties.h  bamtools_filter_ruleparser.h  bamtools_options.cpp  bamtools_options.h  bamtools_pileup_engine.cpp  bamtools_pileup_engine.h  bamtools_utilities.cpp  bamtools_utilities.h  bamtools_variant.h  utils_global.h
lib/tclap-1.2.1/: Makefile  config.status  tclap.pc
lib/tclap-1.2.1/config/: Makefile  config.h
lib/tclap-1.2.1/docs/: Doxyfile  Makefile
lib/tclap-1.2.1/examples/: Makefile  test1  test10  test11  test12  test13  test14  test15  test16  test17  test18  test19  test2  test20  test21  test3  test4  test5  test6  test7  test8  test9
lib/tclap-1.2.1/examples/.deps/: test1.Po  test10.Po  test11.Po  test12.Po  test13.Po  test14.Po  test15.Po  test16.Po  test17-a.Po  test17.Po  test18.Po  test19.Po  test2.Po  test20.Po  test21.Po  test3.Po  test4.Po  test5.Po  test6.Po  test7.Po  test8.Po  test9.Po
lib/tclap-1.2.1/include/: Makefile
lib/tclap-1.2.1/include/tclap/: Makefile
lib/tclap-1.2.1/msc/: Makefile
lib/tclap-1.2.1/msc/examples/: Makefile
lib/tclap-1.2.1/tests/: Makefile
lib/zlib-1.2.7/: CMakeLists.txt
src/: Alignment.cpp  Alignment.d  Alignment.h  ArgParseOutput.h  BamParser.cpp  BamParser.h  CMakeLists.txt  Detect_Breakpoints.cpp  Ignore_Regions.cpp  Ignore_Regions.h  Paramer.h  Parser.cpp  Parser.h  Sniffles.cpp  Version.h  Version.h.in  subdir.mk
src/Genotyper/: Genotyper.cpp  Genotyper.h
src/cluster/: Cluster_SVs.cpp  Cluster_SVs.h
src/force_calling/: Force_calling.cpp  Force_calling.h  VCF_parser.cpp  VCF_parser.h
src/phasing/: PhaserSV.cpp  PhaserSV.h
src/plane-sweep/: IContainer.h  Main.cpp  Main.d  MyHeap.cpp  MyHeap.d  MyHeap.h  MyList.cpp  MyList.d  MyList.h  Node.h  Plane-sweep.h  PlaneSweep.cpp  PlaneSweep_slim.cpp  PlaneSweep_slim.h
src/print/: BedePrinter.cpp  BedePrinter.h  BedpePrinter.cpp  BedpePrinter.h  IPrinter.cpp  IPrinter.h  MariaPrinter.cpp  MariaPrinter.h  NGMPrinter.cpp  NGMPrinter.h  VCFPrinter.cpp  VCFPrinter.h
src/realign/: IAlignment.h  Realign.cpp  Realign.h  SWCPU.cpp  SWCPU.h
src/sniffles/: __init__.py  cluster.py  config.py  consensus.py  genotyping.py  leadprov.py  local_asm.py  parallel.py  postprocessing.py  region.py  result.py  snf.py  snfp.py  sniffles  sv.py  util.py  vcf.py
src/sniffles/utils/: resmon.py  term_colors.py
src/sub/: Breakpoint.cpp  Breakpoint.h  Container.h  Detect_Breakpoints.cpp  Detect_Breakpoints.h  Detect_Breapoints.cpp  Detect_Breapoints.d  IRegion.h
src/tests/: common.py  test_bnd.py  test_bnd_leads.py  test_params.py  test_regions.py  test_vcf.py
src/tests/data/: hg002.bam  hg002.bam.csi  hg008.bam  hg008.bam.csi
src/tree/: BinTree.cpp  BinTree.h  Breakpoint_Tree.cpp  Breakpoint_Tree.h  IntervallContainer.h  IntervallList.cpp  IntervallList.h  IntervallTree.cpp  IntervallTree.h  Intervall_bed.cpp  Intervall_bed.h  Leaf.h  Scapegoat.cpp  Scapegoat.h  TNode.h
src/utils/: resmon.py
test-data/: small-test.bam.bai  test.sh
test_set/: README  expected_output.vcf  reads_region.bam
