[metadata]
name = sniffles
version = 2.2
author = Moritz Smolka
author_email = moritz.g.smolka@gmail.com
description = A fast structural variation caller for long-read sequencing data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fritzsedlazeck/Sniffles
project_urls =
    Bug Tracker = https://github.com/fritzsedlazeck/Sniffles/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires:
    pysam>=0.16.0
scripts:
    src/sniffles/sniffles

[options.packages.find]
where = src
